// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test inventory logic ui Case 2: Test inventory histories 1`] = `
Array [
  Object {
    "amount": 30,
    "date": 2021-01-04T17:00:00.000Z,
    "inventory": "3",
    "type": "add",
  },
  Object {
    "amount": 10,
    "date": 2021-01-04T17:00:00.000Z,
    "inventory": "3",
    "type": "add",
  },
  Object {
    "amount": 10,
    "date": 2021-01-04T17:00:00.000Z,
    "inventory": "3",
    "type": "remove",
  },
  Object {
    "amount": 25,
    "date": 2021-01-04T17:00:00.000Z,
    "inventory": "2",
    "type": "add",
  },
]
`;

exports[`Test inventory logic ui Case 2: Test inventory histories 2`] = `
Array [
  Object {
    "_id": "2",
    "add": 25,
    "category": Object {
      "_id": "1",
      "name": "Food",
    },
    "history": Array [
      Object {
        "amount": 25,
        "date": 2021-01-04T17:00:00.000Z,
        "inventory": "2",
        "type": "add",
      },
    ],
    "inventory": "2",
    "name": "Meat",
    "remove": 0,
    "stock": 12,
    "unit": "kg",
  },
  Object {
    "_id": "3",
    "add": 40,
    "category": Object {
      "_id": "2",
      "name": "Fruit",
    },
    "history": Array [
      Object {
        "amount": 30,
        "date": 2021-01-04T17:00:00.000Z,
        "inventory": "3",
        "type": "add",
      },
      Object {
        "amount": 10,
        "date": 2021-01-04T17:00:00.000Z,
        "inventory": "3",
        "type": "add",
      },
      Object {
        "amount": 10,
        "date": 2021-01-04T17:00:00.000Z,
        "inventory": "3",
        "type": "remove",
      },
    ],
    "inventory": "3",
    "name": "Apple",
    "remove": 10,
    "stock": 50,
    "unit": "piece",
  },
]
`;

exports[`Test inventory logic ui Case 3: Test inventory categories 1`] = `
Array [
  Object {
    "_id": "1",
    "available": false,
    "name": "Food",
  },
  Object {
    "_id": "2",
    "available": false,
    "name": "Fruit",
  },
  Object {
    "_id": "3",
    "available": true,
    "name": "Cream",
  },
]
`;
